# domain-runner

./: .env  .env-v2.example  .env.example  .env.production.example  .gitignore  AI_BRAND_PERCEPTION_PRD.md  AUTH_DEPLOYMENT_CHECKLIST.md  BUILD7_IMPLEMENTATION_SUMMARY.md  BUILD7_ORCHESTRATION_COMPLETE.md  BUILD_7_SUMMARY.md  CLAUDE.md  CLEANUP_REPORT.md  CODEBASE_VALIDATION_REPORT.md  CODE_QUALITY_ASSESSMENT.md  COHORT_INTELLIGENCE_ARCHITECTURE.md  CURRENT_SYSTEM_STATUS.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE_STATUS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW_INSTRUCTIONS.md  DEPLOY_STEPS.md  DOMAIN_PROCESSING_ARCHITECTURE.md  Dockerfile  Dockerfile-v2  Dockerfile.emergency  Dockerfile.rust  ENV_SETUP_GUIDE.md  EXPLICIT_SETUP_INSTRUCTIONS.md  FINAL_99_PERCENT_STATUS.md  FINAL_IMPLEMENTATION_SUMMARY.md  FIND_DATABASE_URL.md  FLOW_NEXUS_QUICKSTART.md  FRONTEND_DEPLOYMENT_READY.md  GOLD_TEST_VALIDATION.md  GO_LIVE_NOW.md  HARD_REQUIREMENTS_ENFORCER.js  HYPER_MONITORING_DASHBOARD.py  (+210 more)
.claude-flow/metrics/: performance.json  task-metrics.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  production-pipeline.yml  render-deploy.yml
.hive-mind/: config.json  hive.db  hive.db-shm  hive.db-wal
.hive-mind/sessions/: hive-mind-prompt-swarm-1755145306846-zgoqyhveu.txt  hive-mind-prompt-swarm-1757779394649-oxx00q6zz.txt  hive-mind-prompt-swarm-1757779530036-4kcpf2ysk.txt  session-1755145306849-k8zpvr7bh-auto-save-1755145336852.json  session-1757779394649-wi6s2dhxo-auto-save-1757779424649.json  session-1757779530036-q83i9zr72-auto-save-1757779560037.json
.swarm/: memory.db-shm  memory.db-wal
_quarantine/: .env.example  .env.render  .env.test  .env.test2  .gitignore  11_LLM_FIX_SUMMARY.md  API_AUTHENTICATION_IMPLEMENTATION.md  API_ENDPOINT_TEST_REPORT.md  API_KEYS.md  API_PRODUCTION_READINESS_REPORT.md  API_SECURITY_STATUS_REPORT.md  API_VALIDATION_TEST.py  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS_REPORT.md  ARCHITECTURE_SUMMARY.md  AUTH_FIXES_DEPLOYMENT_GUIDE.md  BACKEND_API_ARCHITECTURE.md  BACKEND_HEALTH_STATUS.md  BETTER-ARCHITECTURE.md  BLOOMBERG_INTELLIGENCE_ARCHITECTURE_COMPLETE.md  BLOOMBERG_STYLE_COMPETITIVE_INTELLIGENCE.md  BUILD_VALIDATION_REPORT.md  CACHE_REFRESH_REPORT.md  CEO_DEMO_READY.md  CHECK_KEYS_ON_RENDER.sh  CLEANUP_AND_DEPLOYMENT_PLAN.md  CLEAN_ARCHITECTURE_FINAL.md  CLEAN_NODEJS_DEPLOYMENT.md  CODE_QUALITY_REPORT.md  COMPLETE_API_DOCUMENTATION.md  COMPLETE_SYSTEM_DIAGNOSIS.md  COMPREHENSIVE_SYSTEM_REPORT.md  CRAWL_OPTIMIZATION_ANALYSIS.md  CRAWL_OPTIMIZATION_COMPLETE.md  CRITICAL_ARCHITECTURE_ISSUES.md  CRITICAL_DEPLOYMENT_INFO.md  CURRENT_DEPLOYMENT_ARCHITECTURE.md  CURRENT_DEPLOYMENT_STATUS.md  DATABASE_ANALYSIS.md  DATABASE_MIGRATION_COMPLETE_REPORT.md  (+1689 more)
_quarantine/.claude/: sparc-neural-config.json
_quarantine/config/: database.js
_quarantine/cron/: model_detection.sh
_quarantine/docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CONSENSUS-API.md  DEPLOYMENT_GUIDE.md  DEVELOPER_SETUP.md  DRIFT-API.md
_quarantine/hive/: deployment-watchdog-execution.js
_quarantine/infrastructure/: README.md  deploy-production.sh  error-recovery-system.ts  health-check-system.ts  monitoring-dashboard.ts  production-config.ts
_quarantine/migrations/: 001_fix_missing_domain_responses_schema.sql  (+4 more)
_quarantine/rust/: Cargo.toml  Dockerfile  render.yaml
_quarantine/rust/services/crawler/: Cargo.toml
_quarantine/rust/services/crawler/src/: config.rs  crawler.rs  db.rs  main.rs
_quarantine/rust/services/crawler/src/providers/: anthropic.rs  mod.rs  openai.rs  perplexity.rs
_quarantine/rust/specs/: SPARC_CRAWLER_ENGINE.md  SPARC_DOMAIN_REGISTRY.md
artifacts/: contract_results.json  orchestrator_demo.json  pmr_proposals.json  provider_registry.json
config/: legacy_mapping.v1.yml  providers.generated.yml  runtime.yml
docs/: AUTONOMOUS_DEPLOYMENT.md  CLEAN_REWRITE_ARCHITECTURE.md  COMPLETE_SYSTEM_SPECIFICATION.md  hive-mind-sessions.md
infra/: db.py
memory/: claude-flow-data.json
migrations/: 0001_compatibility_views.sql  20240101000000_initial.sql  20250913_core_tables.sql
models/: llm-config.json
nexus/: policy.yml
prds/: PRD_05_Sentinel_v1.md  PRD_L1_Legacy_Mapper_v1.md  PRD_M1_Run_Manifest_v1.md
public/: index.html
schemas/: README.md  backfill_provenance.schema.json  drift_scores.schema.json  observation_status.schema.json  pmr_change_proposal.schema.json  prompt.schema.json  provider_registry.schema.json  responses_normalized.schema.json  responses_raw.schema.json  run_manifest.schema.json  tables.sql
scripts/: autonomous_deploy_system.sh  build.sh  deployment_swarm.py  dev_bootstrap.sh  hourly_pipeline.py  self_healing_deploy.py  shadow_db_test.sh
services/sophisticated-runner-rust/: Cargo.toml  Cargo.toml.backup  FORCE_RESTART.txt  render.yaml
services/sophisticated-runner-rust/src/: ai_providers.rs  database.rs  main.rs
src/: App.jsx  __init__.py  api_service.py  config.py  config.rs  database.rs  database_safety.py  db.ts  domain.rs  drift.rs  error.rs  index.ts  lib.rs  llm.rs  main.rs  metrics.rs  normalizer.rs  ranking.rs  runner.ts  types.ts  web.rs  worker.py  worker.rs
static-files/: TIME_TENSOR_VISUALIZATION.html  test_frontend_api_integration.html
tests/: README.md  setup.ts  test_schemas.py
tools/: allowlist_guard.py  pmr_demo.py  quarantine_legacy.sh  validate_providers.py
(+790 files in other folders)
