[package]
name = "domain-runner"
version = "1.0.0"
edition = "2021"
authors = ["Domain Runner Team"]
description = "High-performance domain analysis system with drift detection"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async traits
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Math for similarity calculations
ndarray = "0.15"
nalgebra = "0.32"

# LLM clients
async-openai = "0.19"

# Metrics
prometheus = "0.13"

[dev-dependencies]
pretty_assertions = "1.4"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "web"
path = "src/bin/web.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"