[package]
name = "domain-runner"
version = "2.0.0"
edition = "2021"
authors = ["Domain Runner Team"]
description = "LLM Brand Memory Tracking Platform"

[dependencies]
# Web framework (axum - modern, fast, type-safe)
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database (sqlx - compile-time verified SQL)
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for LLM APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio-util = "0.7"
futures = "0.3"

# Embeddings & ML (commented out for initial deployment)
# rust-bert = "0.21"
# tch = "0.15"  # PyTorch bindings
# TODO: Add back with libtorch dependencies in Dockerfile

# Utilities
uuid = { version = "1.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# Configuration
config = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Patch dependencies that require edition2024 (not yet stable in Rust 1.81)
[patch.crates-io]
home = { version = "=0.5.9" }
