[workspace]
members = ["services/crawler", "services/domain-registry"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Domain Intelligence Platform"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["multipart", "ws"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "json", "chrono"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
dotenvy = "0.15"

# For rate limiting and circuit breakers
governor = "0.7"
arc-swap = "1.7"

# For metrics
prometheus = "0.13"