[package]
name = "crawler"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
sqlx.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
async-trait.workspace = true
tower.workspace = true
tower-http.workspace = true
dotenvy.workspace = true
governor.workspace = true
arc-swap.workspace = true
prometheus.workspace = true

# Additional for crawler
rand = "0.8"
backoff = "0.4"